--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -12,6 +12,7 @@
 @import url('components/01-atoms/button/button.scss');
 @import url('components/01-atoms/anchor/anchor.scss');
 @import url('components/01-atoms/text/text.scss');
+@import url('components/01-atoms/metamask-status/metamask-status.scss');
 
 /* MOLECULES */
 @import url('components/02-molecules/accordion/accordion.scss');
