--- a/src/components/01-atoms/anchor/anchor.scss
+++ b/src/components/01-atoms/anchor/anchor.scss
@@ -19,7 +19,7 @@
       display: block;
       width: 100%;
       height: 2px;
-      background-color: $black;
+      background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4);
       transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
     }
 
@@ -63,7 +63,7 @@
       display: block;
       width: 0%;
       height: 2px;
-      background-color: $black;
+              background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4);
       transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
     }
 
