Refactor: chagne input fileds to slider where numbers are required

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -48,11 +48,18 @@
 }
 
 .input-image__label {
+	font-size: 14px;
+}
 
+.input-slider__label {
 	font-size: 14px;
 }
 .input-text__field {
 	font-size: 14px;
+}
+
+.input-slider__value {
+	font-size: 12px;
 }
 
 .button {
