--- a/src/components/03-organisms/coin-creation/coin-creation.scss
+++ b/src/components/03-organisms/coin-creation/coin-creation.scss
@@ -75,20 +75,19 @@
 
 			&__fieldset {
 				display: block;
-				margin-bottom: 16px;
+				margin-bottom: 40px;
 				display: grid;
 			}
 
 			&__general, .general {
 				grid-template-columns: 72px 72px 1fr;
 				grid-template-rows: 72px 72px;
-				grid-gap: 16px;
+				grid-column-gap: 0px !important;
 
 
 				&__input--logo { grid-column: 1 / 3; grid-row: 1 / 2 }
 				&__input--name { grid-column:  3 / 6; grid-row: 1 / 2 }
 				&__input--symbol { grid-column: 3 / 6; grid-row: 2 / 3 }
-
 				&__input--logo { width: 144px; height: 144px; }
 
 			}
@@ -96,7 +95,7 @@
 				&__supply-and-liquidity, 
 				.supply-and-liquidity {
 					grid-template-columns: 1fr;
-					grid-gap: 16px;
+					grid-gap: 32px;
 					margin-bottom: 48px;
 				}
 			
