--- a/src/components/03-organisms/coin-creation/coin-creation.scss
+++ b/src/components/03-organisms/coin-creation/coin-creation.scss
@@ -1,188 +1,292 @@
+@import 'styles/variables.scss';
+
 .coin-creation {
 
 	&__header, .header {
+		max-width: 700px;
 		margin-bottom: 64px;
 
 		&__title {
-			text-align: center;
 			margin-bottom: 16px;
 		}
 
-		&__text {
-			text-align: center;
-		}
-
 	}
+
 
 	&__form, .form {
 
-		&__fieldset {
-			margin-bottom: 32px;
+		&__fieldset, .fieldset {
 			display: grid;
-		}
-		
-		&__general, .general {
-			grid-template-columns: 80px 2fr 1fr;
 			grid-gap: 32px;
-		}
-		
-		&__supply-and-liquidity, .supply-and-liquidity {
-			grid-template-columns: 1fr 1fr 1fr;
-			grid-gap: 32px;
-		}
-		
-		&__buy-tax, .buy-tax {
-			grid-row-gap: 16px;
+			margin-bottom: 32px;
+			grid-template-rows: auto auto auto auto;
+			grid-template-columns: 80px auto;
+			grid-template-areas: 
+				"index heading"
+				"index inputs"
+				"index manuals"
+				"index submit";
 
-			&__wrapper {
-				display: grid;
+			&__index, .index {
+				grid-area: index;
+				justify-self: center;;
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-start;
 				align-items: center;
-				grid-template-columns: 48px 2fr 1fr 2fr;
-				grid-gap: 16px;
-			}
-
-		}
-
-		&__sell-tax, .sell-tax {
-			grid-gap: 16px;
-
-			&__wrapper {
-				display: grid;
-				align-items: center;
-				grid-template-columns: 48px 2fr 1fr 2fr;
-				grid-gap: 16px;
-			}
-
-		}
-
-		&__limits, .limits {
-			grid-template-columns: 1fr 1fr;
-			grid-gap: 32px;
-		}
-
-		&__actions {
-			grid-template-columns: auto auto;
-			justify-content: center;
-			align-items: center;
-			grid-gap: 32px;
-		}
-
-	}
-
-	@media (max-width: 800px) {
-		
-			&__form, .form {
-
-			&__fieldset {
-				display: block;
-				margin-bottom: 40px;
-				display: grid;
-			}
-
-			&__general, .general {
-				grid-template-columns: 72px 72px 1fr;
-				grid-template-rows: 72px 72px;
-				grid-column-gap: 0px !important;
-
-
-				&__input--logo { grid-column: 1 / 3; grid-row: 1 / 2 }
-				&__input--name { grid-column:  3 / 6; grid-row: 1 / 2 }
-				&__input--symbol { grid-column: 3 / 6; grid-row: 2 / 3 }
-				&__input--logo { width: 144px; height: 144px; }
-
-			}
-			
-				&__supply-and-liquidity, 
-				.supply-and-liquidity {
-					grid-template-columns: 1fr;
-					grid-gap: 32px;
-					margin-bottom: 48px;
-				}
-			
-				&__buy-tax, .buy-tax {
-					grid-row-gap: 16px;
-					margin-bottom: 48px;
-
-					&__wrapper {
-						display: grid;
-						align-items: center;
-						grid-template-columns: 40px 1fr;
-						grid-template-rows: auto auto auto auto;
-						grid-gap: 16px;
-					}
-
-					&__label {
-						grid-row: span 4;
-						align-self: start;
-						margin-top: 8px;
-					}
-
+				
+				&__number {
+					line-height: 1;
+					margin-bottom: 40px;
 				}
 
-				&__sell-tax, .sell-tax {
-					grid-gap: 16px;
-					margin-bottom: 48px;
-
-					&__wrapper {
-						display: grid;
-						align-items: center;
-						grid-template-columns: 40px 1fr;
-						grid-template-rows: auto auto auto auto;
-						grid-gap: 16px;
-					}
-
-					&__label {
-						grid-row: span 4;
-						align-self: start;
-						margin-top: 8px;
-					}
-
+				&__line {
+					height: 100%;
+					display: block;
+					border-width: 1px;
+					border-style: dotted;
+ 					border-image: linear-gradient(180deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4) 1 100%;
 				}
 
-				&__limits, .limits {
-					grid-template-columns: 1fr;
-					grid-template-rows: auto auto;
-					grid-gap: 16px;
-					margin-bottom: 48px;
-				}
-
-				&__links, .links {
-					grid-template-columns: 1fr;
-					grid-template-rows: auto auto;
-					grid-gap: 16px;
-					margin-bottom: 48px;
-				}
-
-				&__actions {
-					grid-template-columns: auto auto;
+				&__done {
+					max-width: 80px;
+					max-height: 80px; 
+					width: 100%;
+					height: 100%;
+					border-radius: 50%;
+					background-color: $black;
+					display: flex;
 					justify-content: center;
 					align-items: center;
+					margin-top: 16px;
+					color: $white;
+				}
+
+			}
+
+			&__heading, .heading {
+				grid-area: heading;
+
+				&__title {
+					margin-bottom: 12px;
+				}
+				
+				&__subtitle {
+					margin-bottom: 24px;
+				}
+			
+			}
+
+			&__inputs, .inputs {
+				grid-area: inputs;
+				display: grid;
+				grid-gap: 32px;
+			}
+
+			&__manuals {
+				grid-area: manuals;
+			}
+
+			&__submit {
+				grid-area: submit;
+				align-items: center;
+				margin-bottom: 16px;
+			}
+
+			&--general {
+
+				& .inputs {
+					grid-template-columns: 80px 2fr 1fr;
 					grid-gap: 32px;
 				}
 
+			}
+
+			&--supply-and-liquidity {
+
+				& .inputs {
+					grid-template-columns: 1fr 1fr 1fr;
+				}
+
+			}
+
+			&--buy-tax {
+				
+				& .inputs__wrapper {
+					display: grid;
+					align-items: center;
+					grid-gap: 16px;
+					grid-template-columns: 48px 2fr 1fr 2fr;
+				}
+
+			}
+
+			&--sell-tax {
+				
+				& .inputs__wrapper {
+					display: grid;
+					align-items: center;
+					grid-gap: 16px;
+					grid-template-columns: 48px 2fr 1fr 2fr;
+				}
+
+			}	
+
+			&--limits {
+
+				& .inputs {
+					grid-template-columns: 1fr 1fr;
+				}
+
+			}
+
+			&--actions {
+
+				& .inputs {
+					grid-template-columns: auto;
+					width: 100%;
+				}
+
+				& .placeholder {
+					width: 100%;
+					height: 180px;
+					background-color: $grey-40;
+					display: block;
+				}
+
+				& .submit {
+					display: grid;
+					grid-template-columns: auto auto;
+					justify-content: start;
+					grid-gap: 32px;
+				}
+
+			}
+
 		}
+		
+		// &__limits, .limits {
+		// 	grid-template-columns: 1fr 1fr;
+		// 	grid-gap: 32px;
+		// }
+
+		// &__actions {
+		// 	grid-template-columns: auto auto;
+		// 	grid-gap: 32px;
+		// }
 
 	}
 
-	@media (max-width: 600px) {
+	@media (max-width: 650px) {
 
 		&__form, .form {
 
-			&__general, .general {
-				grid-template-columns: 1fr;
-				grid-template-rows: auto auto auto auto;
+			&__fieldset, .fieldset {
+
+				&__submit {
+					grid-area: submit;
+					align-items: center;
+					margin-bottom: 0;
+				}
+					
+					&--general {
+						
+						& .inputs, .inputs {
+							grid-template-columns: 1fr;
+							grid-template-rows: auto auto auto;
+
+							&__item--logo {
+								justify-self: center;
+								align-self: center;
+								width: 120px;
+								height: 120px;
+							}
+
+						}
+
+				}
+
+				&--supply-and-liquidity {
+
+					& .inputs {
+						grid-template-columns: 1fr;
+					}
+
+				}
+
+				&--buy-tax {
+					
+					& .inputs__wrapper {
+						grid-template-columns: 1fr;
+						margin-bottom: 24px;
+					}
+
+				}
+
+				&--sell-tax {
+					
+					& .inputs__wrapper {
+						grid-template-columns: 1fr;
+						margin-bottom: 24px;
+					}
+
+				}	
+
+				&--limits {
+
+					& .inputs {
+						grid-template-columns: 1fr;
+					}
+
+				}
+
+				&--actions {
+
+					& .inputs {
+						grid-template-columns: auto;
+						width: 100%;
+					}
+
+
+					& .submit {
+						grid-template-columns: auto;
+						justify-items: start;
+
+						& .anchor {
+							display: none;
+						}
+					}
+
+				}
+
+			}
+			
+
+		}
+
+	}
+
+	@media (max-width: 400px) {
+
+		&__form, .form {
+
+			&__fieldset, .fieldset {
+				display: grid;
 				grid-gap: 16px;
-
-				&__input--image { grid-column: 1 / 2; grid-row: 1 / 2 }
-				&__input--name { grid-column:  1 / 2; grid-row: 2 / 3 }
-				&__input--chain { grid-column: 1 / 2; grid-row: 3 / 4 }
-				&__input--symbol { grid-column: 1 / 2; grid-row: 4 / 5 }
-
-				&__input--logo { 
-					width: 120px; height: 120px;
-					align-self: center;
-					justify-self: center;
-				 }
+				grid-template-columns: 40px auto !important;
+				
+				&__index, .index {
+					
+					&__number {
+						margin-bottom: 12px;
+					}
+					
+					&__done {
+						max-width: 64px;
+						max-height: 40px;		
+					}
+					
+				}
 
 			}
 
@@ -191,3 +295,182 @@
 	}
 	
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	// @media (max-width: 800px) {
+		
+	// 		&__form, .form {
+
+	// 		&__fieldset {
+	// 			display: block;
+	// 			margin-bottom: 40px;
+	// 			display: grid;
+	// 		}
+
+	// 		&__general, .general {
+	// 			grid-template-columns: 72px 72px 1fr;
+	// 			grid-template-rows: 72px 72px;
+	// 			grid-column-gap: 0px !important;
+
+
+	// 			&__input--logo { grid-column: 1 / 3; grid-row: 1 / 2 }
+	// 			&__input--name { grid-column:  3 / 6; grid-row: 1 / 2 }
+	// 			&__input--symbol { grid-column: 3 / 6; grid-row: 2 / 3 }
+	// 			&__input--logo { width: 144px; height: 144px; }
+
+	// 		}
+			
+	// 			&__supply-and-liquidity, 
+	// 			.supply-and-liquidity {
+	// 				grid-template-columns: 1fr;
+	// 				grid-gap: 32px;
+	// 				margin-bottom: 48px;
+	// 			}
+			
+	// 			&__buy-tax, .buy-tax {
+	// 				grid-row-gap: 16px;
+	// 				margin-bottom: 48px;
+
+	// 				&__wrapper {
+	// 					display: grid;
+	// 					align-items: center;
+	// 					grid-template-columns: 40px 1fr;
+	// 					grid-template-rows: auto auto auto auto;
+	// 					grid-gap: 16px;
+	// 				}
+
+	// 				&__label {
+	// 					grid-row: span 4;
+	// 					align-self: start;
+	// 					margin-top: 8px;
+	// 				}
+
+	// 			}
+
+	// 			&__sell-tax, .sell-tax {
+	// 				grid-gap: 16px;
+	// 				margin-bottom: 48px;
+
+	// 				&__wrapper {
+	// 					display: grid;
+	// 					align-items: center;
+	// 					grid-template-columns: 40px 1fr;
+	// 					grid-template-rows: auto auto auto auto;
+	// 					grid-gap: 16px;
+	// 				}
+
+	// 				&__label {
+	// 					grid-row: span 4;
+	// 					align-self: start;
+	// 					margin-top: 8px;
+	// 				}
+
+	// 			}
+
+	// 			&__limits, .limits {
+	// 				grid-template-columns: 1fr;
+	// 				grid-template-rows: auto auto;
+	// 				grid-gap: 16px;
+	// 				margin-bottom: 48px;
+	// 			}
+
+	// 			&__links, .links {
+	// 				grid-template-columns: 1fr;
+	// 				grid-template-rows: auto auto;
+	// 				grid-gap: 16px;
+	// 				margin-bottom: 48px;
+	// 			}
+
+	// 			&__actions {
+	// 				grid-template-columns: auto auto;
+	// 				justify-content: center;
+	// 				align-items: center;
+	// 				grid-gap: 32px;
+	// 			}
+
+	// 	}
+
+	// }
+
+	// @media (max-width: 600px) {
+
+	// 	&__form, .form {
+
+	// 		&__general, .general {
+	// 			grid-template-columns: 1fr;
+	// 			grid-template-rows: auto auto auto auto;
+	// 			grid-gap: 16px;
+
+	// 			&__input--image { grid-column: 1 / 2; grid-row: 1 / 2 }
+	// 			&__input--name { grid-column:  1 / 2; grid-row: 2 / 3 }
+	// 			&__input--chain { grid-column: 1 / 2; grid-row: 3 / 4 }
+	// 			&__input--symbol { grid-column: 1 / 2; grid-row: 4 / 5 }
+
+	// 			&__input--logo { 
+	// 				width: 120px; height: 120px;
+	// 				align-self: center;
+	// 				justify-self: center;
+	// 			 }
+
+	// 		}
+
+	// 	
