--- a/src/components/03-organisms/notifier/notifier.scss
+++ b/src/components/03-organisms/notifier/notifier.scss
@@ -3,12 +3,12 @@
 
 .notifier {
 	position: fixed;
-	top: 80px;
+	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
 	background-color: transparentize($white, 1);
-	z-index: 50;
+	z-index: 15;
 	backdrop-filter: blur(0px);
 	transition: all 1s ease;
 	pointer-events: none;
@@ -27,6 +27,7 @@
 		padding: 64px;
 		max-width: 650px;
 		transition: all 1s ease;
+		margin: 260px 0;
 		@include rainbow-border;
 
 		&__title {
