--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,6 +2,9 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	-webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 fieldset {
