--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -14,3 +14,10 @@ fieldset {
 a {
 	text-decoration: none;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; 
+}
