--- a/src/components/03-organisms/hero/hero.scss
+++ b/src/components/03-organisms/hero/hero.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables.scss';
+
 .hero {
     
     &__inner {
@@ -28,11 +30,25 @@
 
     }
 
-    &__wallpaper {
+    &__wallpaper, .wallpaper {
         width: 100%;
         height: 100%;
         object-fit: cover;
         display: block;
+        position: relative;
+        height: 100%;
+        width: 150%;
+        background-color: $grey-40;
+        overflow: hidden;;
+
+        &__graphic {
+            display: block;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: -5%;
+            transform: rotateY(180deg);
+        }
     }
 
 		@media (max-width: 950px) {
